--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -65,25 +65,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="common\Constants.cs" />
-    <Compile Include="common\Settings.cs" />
-    <Compile Include="exceptions\InvalidStateException.cs" />
-    <Compile Include="helpers\DriverHelper.cs" />
-    <Compile Include="helpers\EnvironmentHelper.cs" />
-    <Compile Include="helpers\SelectTagHelper.cs" />
-    <Compile Include="helpers\StringHelper.cs" />
-    <Compile Include="helpers\WaitHelper.cs" />
-    <Compile Include="pages\HomePage.cs" />
-    <Compile Include="pages\NewResidentialCustomerPage.cs" />
-    <Compile Include="pages\PageBase.cs" />
+    <Compile Include="Common\Constants.cs" />
+    <Compile Include="Common\Settings.cs" />
+    <Compile Include="Exceptions\InvalidStateException.cs" />
+    <Compile Include="Helpers\DriverHelper.cs" />
+    <Compile Include="Helpers\EnvironmentHelper.cs" />
+    <Compile Include="Helpers\SelectTagHelper.cs" />
+    <Compile Include="Helpers\StringHelper.cs" />
+    <Compile Include="Helpers\WaitHelper.cs" />
+    <Compile Include="PagesObjects\PageBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="qa\ObjectQA.cs" />
-    <Compile Include="qa\StringQA.cs" />
-    <Compile Include="tests\Selendroid\SelendroidAppTests.cs">
+    <Compile Include="QA\ObjectQA.cs" />
+    <Compile Include="QA\StringQA.cs" />
+    <Compile Include="Tests\Selendroid\SelendroidAppTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="tests\TestBase.cs" />
-    <Compile Include="common\TestCaseSettings.cs" />
+    <Compile Include="Tests\TestBase.cs" />
+    <Compile Include="Common\TestCaseSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -110,6 +108,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="PagesObjects\Selendroid\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
