--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -74,15 +74,21 @@
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Helpers\WaitHelper.cs" />
     <Compile Include="PagesObjects\PageBase.cs" />
+    <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUiSelectorPage.cs" />
+    <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUIAutomatorPage.cs" />
     <Compile Include="PagesObjects\SelendroidApp\HomeScreenActivityPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QA\ObjectQA.cs" />
     <Compile Include="QA\StringQA.cs" />
-    <Compile Include="Tests\SelendroidApp\SelendroidAppTests.cs">
+    <Compile Include="Tests\SelendroidApp\LocatorTests\FindsByAndroidUiSelectorTests.cs" />
+    <Compile Include="Tests\SelendroidApp\LocatorTests\FindsByAndroidUIAutomatorTests.cs" />
+    <Compile Include="Tests\SelendroidApp\DriverCapabilities.cs" />
+    <Compile Include="Tests\SelendroidApp\ActivityTests\HomeScreenActivityTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Common\TestCaseSettings.cs" />
+    <Compile Include="Tests\TestBaseGeneric.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
