--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -74,8 +74,10 @@
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Helpers\WaitHelper.cs" />
     <Compile Include="PagesObjects\PageBase.cs" />
+    <Compile Include="PagesObjects\PageObjectFactory.cs" />
     <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUiSelectorPage.cs" />
     <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUIAutomatorPage.cs" />
+    <Compile Include="PagesObjects\SelendroidApp\DialogPage.cs" />
     <Compile Include="PagesObjects\SelendroidApp\HomeScreenActivityPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QA\ObjectQA.cs" />
