--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -75,10 +75,11 @@
     <Compile Include="Helpers\WaitHelper.cs" />
     <Compile Include="PagesObjects\PageBase.cs" />
     <Compile Include="PagesObjects\PageObjectFactory.cs" />
+    <Compile Include="PagesObjects\SelendroidApp\RegisterUserPage.cs" />
     <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUiSelectorPage.cs" />
     <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUIAutomatorPage.cs" />
     <Compile Include="PagesObjects\SelendroidApp\DialogPage.cs" />
-    <Compile Include="PagesObjects\SelendroidApp\HomeScreenActivityPage.cs" />
+    <Compile Include="PagesObjects\SelendroidApp\HomeScreenPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QA\ObjectQA.cs" />
     <Compile Include="QA\StringQA.cs" />
