--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -77,13 +77,14 @@
     <Compile Include="Helpers\UiSelectorChainedHelper.cs" />
     <Compile Include="Helpers\UiSelectorHelper.cs" />
     <Compile Include="Helpers\WaitHelper.cs" />
-    <Compile Include="PagesObjects\PageBase.cs" />
-    <Compile Include="PagesObjects\PageObjectFactory.cs" />
-    <Compile Include="PagesObjects\SelendroidApp\RegisterUserPage.cs" />
-    <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUiSelectorPage.cs" />
-    <Compile Include="PagesObjects\SelendroidApp\FindsByAndroidUIAutomatorPage.cs" />
-    <Compile Include="PagesObjects\SelendroidApp\DialogPage.cs" />
-    <Compile Include="PagesObjects\SelendroidApp\HomeScreenPage.cs" />
+    <Compile Include="PageObjects\GmailApp\WelcomePage.cs" />
+    <Compile Include="PageObjects\PageBase.cs" />
+    <Compile Include="PageObjects\PageObjectFactory.cs" />
+    <Compile Include="PageObjects\SelendroidApp\RegisterUserPage.cs" />
+    <Compile Include="PageObjects\SelendroidApp\FindsByAndroidUiSelectorPage.cs" />
+    <Compile Include="PageObjects\SelendroidApp\FindsByAndroidUIAutomatorPage.cs" />
+    <Compile Include="PageObjects\SelendroidApp\DialogPage.cs" />
+    <Compile Include="PageObjects\SelendroidApp\HomeScreenPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QA\ObjectQA.cs" />
     <Compile Include="QA\StringQA.cs" />
@@ -127,7 +128,9 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Tests\GmailApp\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
