--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Helpers\UiSelectorChainedHelper.cs" />
     <Compile Include="Helpers\UiSelectorHelper.cs" />
     <Compile Include="Helpers\WaitHelper.cs" />
+    <Compile Include="PageObjects\GmailApp\ConversationListPage.cs" />
+    <Compile Include="PageObjects\GmailApp\EmailAddressSelectionPage.cs" />
     <Compile Include="PageObjects\GmailApp\WelcomePage.cs" />
     <Compile Include="PageObjects\PageBase.cs" />
     <Compile Include="PageObjects\PageObjectFactory.cs" />
@@ -88,6 +90,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QA\ObjectQA.cs" />
     <Compile Include="QA\StringQA.cs" />
+    <Compile Include="Tests\GmailApp\GalaxyS4Capabilities.cs" />
+    <Compile Include="Tests\GmailApp\HomeScreenActivityTests.cs" />
     <Compile Include="Tests\SelendroidApp\ActivityTests\RegisterUserActivityTests.cs" />
     <Compile Include="Tests\DriverCapabilitiesBase.cs" />
     <Compile Include="Tests\SelendroidApp\LocatorTests\FindsByAndroidUiSelectorTests.cs" />
@@ -128,9 +132,7 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tests\GmailApp\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
