--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Helpers\UiSelectorChainedHelper.cs" />
     <Compile Include="Helpers\UiSelectorHelper.cs" />
     <Compile Include="Helpers\WaitHelper.cs" />
+    <Compile Include="PageObjects\ChecklistApp\ChecklistPage.cs" />
+    <Compile Include="PageObjects\ChecklistApp\EditItemPage.cs" />
+    <Compile Include="PageObjects\ChecklistApp\MenuBarPage.cs" />
+    <Compile Include="PageObjects\ChecklistApp\MainPage.cs" />
     <Compile Include="PageObjects\GmailApp\ConversationListPage.cs" />
     <Compile Include="PageObjects\GmailApp\EmailAddressSelectionPage.cs" />
     <Compile Include="PageObjects\GmailApp\WelcomePage.cs" />
@@ -92,6 +96,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QA\ObjectQA.cs" />
     <Compile Include="QA\StringQA.cs" />
+    <Compile Include="Tests\ChecklistApp\ChecklistTests.cs" />
+    <Compile Include="Tests\ChecklistApp\GalaxyS4Capabilities.cs" />
     <Compile Include="Tests\GmailApp\GalaxyS4Capabilities.cs" />
     <Compile Include="Tests\GmailApp\ConversationListTests.cs" />
     <Compile Include="Tests\SelendroidApp\ActivityTests\RegisterUserActivityTests.cs" />
