Added TouchAction and MultiTouch tests, and, general refactoring

--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Helpers\IosJavaScriptExecutor.cs" />
     <Compile Include="PageObjects\PageBase.cs" />
     <Compile Include="PageObjects\PageObjectFactory.cs" />
+    <Compile Include="PageObjects\SelendroidApp\TouchGesturesPage.cs" />
     <Compile Include="PageObjects\SelendroidApp\FindsByAndroidUiScrollablePage.cs" />
     <Compile Include="PageObjects\SelendroidApp\RegisterUserPage.cs" />
     <Compile Include="PageObjects\SelendroidApp\FindsByAndroidUiSelectorPage.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Tests\ChecklistApp\GalaxyS4Capabilities.cs" />
     <Compile Include="Tests\GmailApp\GalaxyS4Capabilities.cs" />
     <Compile Include="Tests\GmailApp\ConversationListTests.cs" />
+    <Compile Include="Tests\SelendroidApp\ActivityTests\TouchGesturesActivityTests.cs" />
     <Compile Include="Tests\SelendroidApp\ActivityTests\RegisterUserActivityTests.cs" />
     <Compile Include="Tests\DriverCapabilitiesBase.cs" />
     <Compile Include="Tests\SelendroidApp\LocatorTests\FindsByAndroidUiScrollableTests.cs" />
