Added process helper to check if android device is running. Also refactored AppiumLocalServiceBuilder

--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -65,7 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\AppiumLocalServiceHelper.cs" />
+    <Compile Include="Helpers\AppiumLocalServiceBuilder.cs" />
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Exceptions\InvalidParameterException.cs" />
     <Compile Include="Exceptions\InvalidStateException.cs" />
@@ -73,6 +73,7 @@
     <Compile Include="Helpers\EnvironmentHelper.cs" />
     <Compile Include="Helpers\DropDownHelper.cs" />
     <Compile Include="Helpers\ObjectHelper.cs" />
+    <Compile Include="Helpers\ProcessHelper.cs" />
     <Compile Include="Helpers\RandomHelper.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Helpers\UiSelectorChainedHelper.cs" />
