--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Helpers\UiSelectorChainedHelper.cs" />
     <Compile Include="Helpers\UiScrollableHelper.cs" />
     <Compile Include="Helpers\UiSelectorHelper.cs" />
-    <Compile Include="Helpers\WaitHelper.cs" />
+    <Compile Include="Helpers\TryHelper.cs" />
     <Compile Include="PageObjects\ChecklistApp\ChecklistPage.cs" />
     <Compile Include="PageObjects\ChecklistApp\EditItemPage.cs" />
     <Compile Include="PageObjects\ChecklistApp\MenuBarPage.cs" />
