--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Helpers\UiScrollableHelper.cs" />
     <Compile Include="Helpers\UiSelectorHelper.cs" />
     <Compile Include="Helpers\TryHelper.cs" />
+    <Compile Include="PageObjects\AutomationChallengesApp\UserControlsPage.cs" />
     <Compile Include="PageObjects\AutomationChallengesApp\AlertDialogPage.cs" />
     <Compile Include="PageObjects\AutomationChallengesApp\NavigationDrawerPage.cs" />
     <Compile Include="PageObjects\AutomationChallengesApp\SwipeToDeletePage.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="QA\StringQA.cs" />
     <Compile Include="Configuration\DriverCapabilities.cs" />
     <Compile Include="Configuration\Devices\Device.cs" />
+    <Compile Include="Tests\AutomationChallengesApp\UserControlsTest.cs" />
     <Compile Include="Tests\AutomationChallengesApp\AlertDialogTest.cs" />
     <Compile Include="Tests\AutomationChallengesApp\SwipeToDeleteTest.cs" />
     <Compile Include="Tests\AutomationChallengesApp\ResultListTest.cs" />
