--- a/appium/Mobile.App.Automation/packages.config
+++ b/appium/Mobile.App.Automation/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net461" />
+  <package id="DotNetZip.Reduced" version="1.9.1.8" targetFramework="net461" />
+  <package id="Eyes.Appium" version="3.4.0" targetFramework="net461" />
+  <package id="Eyes.Sdk" version="2.7.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
