refactoring so that DesiredCapabilities is passed through test and page objects instead of a wrapper class

--- a/appium/Mobile.App.Automation/Configuration/Settings.json
+++ b/appium/Mobile.App.Automation/Configuration/Settings.json
@@ -1,5 +1,6 @@
 ﻿{
 	"deviceCapabilitiesFolderPath": "D:\\github\\qa\\appium\\Mobile.App.Automation\\Configuration\\Devices",
 	"appiumHubUri": "http://127.0.0.1:4723/wd/hub",
+	"useGrid": true,
 	"defaultTimeOut": 20
 }
