refactoring out old code no longer in use and cleaning up framework continued refactoring of framework for parallel code execution

--- a/appium/Mobile.App.Automation/Configuration/Settings.json
+++ b/appium/Mobile.App.Automation/Configuration/Settings.json
@@ -1,7 +1,8 @@
 ﻿{
 	"appiumHubUri": "http://127.0.0.1:4723/wd/hub",
-	"commandTimeOut": 30,
-	"defaultTimeOut": 20,
+	"commandTimeOut": 120,
 	"deviceCapabilitiesFolderPath": "D:\\github\\qa\\appium\\Mobile.App.Automation\\Configuration\\Devices",
-	"useGrid": true
+	"useGrid": false,
+	"implicitWait": 100,
+	"webDriverWaitTimeOut": 60
 }
