added element wrapper class

--- a/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
+++ b/appium/Mobile.App.Automation/KPE.Mobile.App.Automation.csproj
@@ -113,6 +113,7 @@
     <Compile Include="PageObjects\SelendroidApp\FindsByAndroidUIAutomatorPage.cs" />
     <Compile Include="PageObjects\SelendroidApp\DialogPage.cs" />
     <Compile Include="PageObjects\SelendroidApp\HomeScreenPage.cs" />
+    <Compile Include="PageObjects\Wrappers\ElementWrapper.cs" />
     <Compile Include="PageObjects\Wrappers\ListViewRowWrapper.cs" />
     <Compile Include="PageObjects\Wrappers\ListViewWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
